src/auth-config.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: istio-ingressgateway
  namespace: ui
spec:
  selector:
    matchLabels:
      app: demoui
  jwtRules:
  - issuer: https://aymdzxoz3.accounts400.ondemand.com
    jwksUri: https://aymdzxoz3.accounts400.ondemand.com/oauth2/certs
    forwardOriginalToken: true
    outputPayloadToHeader: x-jwt
