src/AuthZPolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: demomesh
 namespace: server
spec:
 selector:
   matchLabels:
     app: demomesh
 action: ALLOW
